--- a/.github/workflows/publish-to-gh-pages.yml
+++ b/.github/workflows/publish-to-gh-pages.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Remove launchSettings.json (to not override ASPNETCORE_ENVIRONMENT)
-        run: [ ! -e ${{ env.WEBAPP_PATH }}Properties/launchSettings.json ] || rm ${{ env.WEBAPP_PATH }}Properties/launchSettings.json
+        run:  rm -f ${{ env.WEBAPP_PATH }}Properties/launchSettings.json
 
       - name: Tailwind - download and run cli
         run: |
