--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": ".",
   "scripts": {
     "build": "react-scripts --openssl-legacy-provider build",
-    "deploy": "gh-pages -b gh-pages",
+    "deploy": "gh-pages -b gh-pages -d build",
     "eject": "react-scripts eject",
     "start": "react-scripts --openssl-legacy-provider start",
     "test": "react-scripts test"
