--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -46,6 +46,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
-    - run: npm run deploy
+    - run: npm gh-pages -d build
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
