--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -45,7 +45,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install
+    - run: npm install gh-pages
     - run: npm gh-pages -d build
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
