--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -48,6 +48,6 @@ jobs:
     - run: |
         git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
         npm install
-        npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
+        npm run deploy -- -u "securebydesign@outlook.dk"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
